Fredag 16. april ny forelesning

--- a/14_Z-transformasjon.ipynb
+++ b/14_Z-transformasjon.ipynb
@@ -62,7 +62,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "skip"
     }
    },
    "source": [
@@ -71,8 +71,23 @@
     "* Repetisjon Transferfunksjon\n",
     "* Poler og nullpunkt\n",
     "* Pol- og nullpunktskart\n",
-    "* Poler, nullpunkt og frekvensrespons (filterform)\n",
-    "* Stabilitet"
+    "* Poler, nullpunkt og frekvensrespons (filterform)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Tema Tirsdag 13. april:\n",
+    "\n",
+    "* Repetisjon transferfunksjon, poler og nullpunkt\n",
+    "* Fortsettele poler, nullpunkt og frekvensrespons (filterform)\n",
+    "* Stabilitet\n",
+    "* Quiz"
    ]
   },
   {
@@ -181,7 +196,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ba0af3ae498e4119b05c5828c443e6c3",
+       "model_id": "ad997f00dee2440783943add87b38184",
        "version_major": 2,
        "version_minor": 0
       },
@@ -195,7 +210,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "911f324ea1214c46b408a2c42f1d3a1d",
+       "model_id": "8ed3aa611a3c4362a4f3e03f2e68ef3c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -209,7 +224,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5b2737e51f074b64af151abf7a3d8bc8",
+       "model_id": "27d136949d97448db0d490383a24eb71",
        "version_major": 2,
        "version_minor": 0
       },
@@ -373,7 +388,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "890cec8abf0849248ef56dfc5266396f",
+       "model_id": "59597199c16e4ce6afb115f1f5db38ea",
        "version_major": 2,
        "version_minor": 0
       },
@@ -483,7 +498,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "skip"
     }
    },
    "source": [
@@ -494,17 +509,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "skip"
     }
    },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b90970bdf1f7492687bd37fb8f9e5032",
+       "model_id": "b6be6d77921a4999b2198f106f5950d8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -518,15 +533,15 @@
    ],
    "source": [
     "# Angi punkt på z-planet i polarkoordinater\n",
-    "# z = 0.9*exp(2j*pi/8) # Innenfor enhetssirkel\n",
-    "z = 1*exp(2j*pi/8)     # På enhetssirkel\n",
-    "# z = 1.1*exp(2j*pi/8) # Utenfor enhetssirkel\n",
+    "#z = 0.9*exp(2j*pi/8) # Innenfor enhetssirkel\n",
+    "#z = 1*exp(2j*pi/8)     # På enhetssirkel\n",
+    "z = 1.1*exp(2j*pi/8) # Utenfor enhetssirkel\n",
     "\n",
     "# Regn ut z^(-n)\n",
     "n = np.arange(0, 32)\n",
     "x_n = z**-n\n",
     "\n",
-    "plt.close(2); plt.figure(2)\n",
+    "plt.close(3); plt.figure(3)\n",
     "plt.subplot(2,1,1)\n",
     "plt.stem(n, np.real(x_n), markerfmt='.', basefmt='grey', use_line_collection=True)\n",
     "plt.ylabel(r'Re($x[n]$)')\n",
@@ -542,7 +557,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "skip"
     }
    },
    "source": [
@@ -578,11 +593,43 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "skip"
     }
    },
    "source": [
     "<img src=\"Figurer/14_Ztransform/PZ_lecture/Slide1.PNG\" style=\"width: 85%; margin-left: 50px\" />"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Frekvensrespons\n",
+    "\n",
+    "* Hvordan et filter påvirker et inngangssignal som er en ren sinussekvens.\n",
+    "\n",
+    "\n",
+    "<img src=\"Figurer/14_Ztransform/Fig7_DTFT.png\" style=\"width: 60%; margin-left: 200px\" />"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Transferfunksjon\n",
+    "\n",
+    "* Hvordan et filter påvirker et inngangssignal på formen $z^{-n}$.\n",
+    "\n",
+    "\n",
+    "<img src=\"Figurer/14_Ztransform/Fig8_TF.png\" style=\"width: 60%; margin-left: 200px\" />"
    ]
   },
   {
@@ -609,7 +656,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "skip"
     }
    },
    "source": [
@@ -639,8 +686,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {
+    "scrolled": false,
     "slideshow": {
      "slide_type": "slide"
     }
@@ -649,7 +697,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "03bebb216b564223836356696d8cae36",
+       "model_id": "30a1635f5d8f494a92593bb31c58bbde",
        "version_major": 2,
        "version_minor": 0
       },
@@ -663,9 +711,9 @@
    ],
    "source": [
     "# Filter fra regneeksempel:\n",
-    "b = [0.5, 0.5] \n",
-    "a = [1, 0, -0.64]\n",
-    "plt.close(3); plt.figure(3, figsize=(12,8))\n",
+    "b = [1, 1, 1, 1] \n",
+    "a = [1, -0.6]\n",
+    "plt.close(4); plt.figure(4, figsize=(12,8))\n",
     "tfPlot(b, a) # Ikke standardfunksjon, definert i kildekoden til forelesningen."
    ]
   },
@@ -706,7 +754,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "skip"
     }
    },
    "source": [
@@ -717,7 +765,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "skip"
     }
    },
    "source": [
@@ -728,7 +776,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "skip"
     }
    },
    "source": [
@@ -739,7 +787,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "skip"
     }
    },
    "source": [
@@ -748,17 +796,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "skip"
     }
    },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "23241ed7ebc249ba8b2d1eb48e9a78fc",
+       "model_id": "7076883f761545a1b9d905044c35b264",
        "version_major": 2,
        "version_minor": 0
       },
@@ -773,14 +821,14 @@
    "source": [
     "b = [1, 0, 0, 0, 1]\n",
     "a = [1, 0, 0.49]\n",
-    "visualizeTF(b, a, fig_num=4)"
+    "visualizeTF(b, a, fig_num=5)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "skip"
     }
    },
    "source": [
@@ -799,7 +847,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2f3621427cfe42f8b154527995bad0d9",
+       "model_id": "1f7f201d1ec54ca89f21dc4897eb33da",
        "version_major": 2,
        "version_minor": 0
       },
@@ -817,10 +865,11 @@
     "                   1j])\n",
     "\n",
     "poles = np.array([0.7*exp(1j*pi/3),\n",
-    "                  0.7*exp(-1j*pi/3)])\n",
+    "                  0.7*exp(-1j*pi/3),\n",
+    "                 0])\n",
     "\n",
     "b, a = zp2tf(zeroes, poles)\n",
-    "visualizeTF(b, a, fig_num=5)"
+    "visualizeTF(b, a, fig_num=6)"
    ]
   },
   {
@@ -849,11 +898,215 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "skip"
     }
    },
    "source": [
-    "<img src=\"Figurer/14_Ztransform/PZ_lecture/Slide12.PNG\" style=\"width: 90%; margin-left: 50px\" />"
+    "## Kodeeksempel: Frihåndsdesign av filter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "091a08a2e4b3432385f80b14cf1d8c1b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "zeroes = np.array([exp(1j*pi/4),\n",
+    "                  exp(-1j*pi/4)])\n",
+    "\n",
+    "poles = np.array([0.6*exp(3j*pi/4),\n",
+    "                 0.6*exp(-3j*pi/4)])\n",
+    "\n",
+    "b, a = zp2tf(zeroes, poles)\n",
+    "plt.close(6); plt.figure(6)\n",
+    "pzPlot(b, a)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "source": [
+    "## Regneeksempel 4:\n",
+    "\n",
+    "* Et filter har transferfunksjonen \n",
+    "$$H(z) = K \\cdot \\frac{1 - z^{-1}+ z^{-2}}{1+0.7\\cdot z^{-1}+0.49\\cdot z^{-2}}$$\n",
+    "der skaleringsfaktoren $K$ ikke er definert.\n",
+    "Identifiser filterformen, og finn en skaleringsfaktor $K$, som fører til at $\\left| H\\left(e^{j\\hat{\\omega}}\\right)\\right| \\approx 1$ i passbåndet."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.7 0.7]\n",
+      "[ 0.66666667 -0.66666667]\n"
+     ]
+    }
+   ],
+   "source": [
+    "poles = np.roots([1, 0.7, 0.49])\n",
+    "print(np.abs(poles))\n",
+    "print(np.angle(poles)/pi)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {
+    "scrolled": true,
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a55db9ad1cdc4587a2d17307707a70f1",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "b = np.array([1, -1, 1, -1])*0.25\n",
+    "a = np.array([1, 0.7, 0.49])\n",
+    "plt.close(7); plt.figure(7)\n",
+    "Magnitude(b, a)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "source": [
+    "## Kodeeksempel 2: Impulsrespons andreordens filter\n",
+    "\n",
+    "* Finn filterkoeffisienter til et filter med to poler i $z = 0.9\\cdot e^{\\pm j\\cdot \\frac{\\pi}{3}}$, og ett nullpunkt i $z = 0.45$. Vis deretter *impulsresponsen* til filteret i en figur."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7d7df2e1aaf24fc48cdabd891a99df81",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<StemContainer object of 3 artists>"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "zeroes = np.array([0.45])\n",
+    "poles = np.array([0.9*exp(1j*pi/3),\n",
+    "                  0.9*exp(-1j*pi/3)])\n",
+    "\n",
+    "b = np.poly(zeroes) \n",
+    "a = np.poly(poles)\n",
+    "\n",
+    "dn = np.zeros(24)\n",
+    "dn[0]=1\n",
+    "\n",
+    "hn = sig.lfilter(b, a, dn)\n",
+    "\n",
+    "plt.close(7); plt.figure(7)\n",
+    "plt.stem(hn)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "source": [
+    "# Konvergensområde (ROC)\n",
+    "\n",
+    "* Det området hvor z-transformen konvergerer mot en bestemt verdi kalles *Konvergensområde (ROC)*\n",
+    "* Konvergensområdet til en Transferfunksjon $H(z)$ er gitt som området med radius større enn ytterste pol.\n",
+    "    - Eksempel:\n",
+    "    \\begin{align}\n",
+    "    y[n] &= x[n] + 0.9 \\cdot y[n-1]\\\\\n",
+    "    h[n] &= 0.9^{n} \\\\\n",
+    "    Z(h[n]) &= \\frac{z}{z-0.9}, \\ \\ |z| > 0.9\n",
+    "    \\end{align}\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
+   "source": [
+    "#### <img src=\"Figurer/14_Ztransform/PZ_lecture/Slide12.PNG\" style=\"width: 90%; margin-left: 50px\" />"
    ]
   },
   {
@@ -871,7 +1124,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "skip"
     }
    },
    "source": [
@@ -882,7 +1135,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "skip"
     }
    },
    "source": [
@@ -893,7 +1146,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "skip"
     }
    },
    "source": [
@@ -908,7 +1161,7 @@
     }
    },
    "source": [
-    "## Kodeeksempel 2: Impulsrespons IIR-filtre\n",
+    "## Kodeeksempel 3: Impulsrespons IIR-filtre\n",
     "* Lag plot av følgende:\n",
     "    1. Impulsrespons for et filter med to poler i $z=0.9\\cdot e^{\\pm j\\cdot \\frac{\\pi}{8}}$\n",
     "    2. Impulsrespons for et filter med to poler i $z=1.0\\cdot e^{\\pm j\\cdot \\frac{\\pi}{8}}$\n",
@@ -917,7 +1170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -927,7 +1180,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d19006aa96654feab6dea079a0a2353e",
+       "model_id": "820b006dde844f88924c4fd4ca26f9ff",
        "version_major": 2,
        "version_minor": 0
       },
@@ -940,14 +1193,16 @@
     }
    ],
    "source": [
-    "poles = 1*exp(1j*np.array([pi/8, -pi/8]))\n",
+    "#poles = 0.9*exp(1j*np.array([pi/8, -pi/8])) # Poler innenfor enhetssirkelen\n",
+    "#poles = 1*exp(1j*np.array([pi/8, -pi/8]))     # Poler på enhetssirkelen\n",
+    "poles = 1.1*exp(1j*np.array([pi/8, -pi/8])) # Poler utenfor enhetssirkelen\n",
     "\n",
     "b, a = zp2tf(poles=poles)\n",
     "\n",
-    "xn = np.zeros(64)\n",
+    "xn = np.zeros(128)\n",
     "xn[0] = 1\n",
     "hn = sig.lfilter(b, a, xn)\n",
-    "plt.close(6); plt.figure(6, figsize=(8,3))\n",
+    "plt.close(8); plt.figure(8, figsize=(8,3))\n",
     "hn_plot = plt.stem(hn, markerfmt='.', basefmt='black',use_line_collection=True)\n",
     "hn_plot.baseline.set_linewidth(0.5)\n",
     "hn_plot.baseline.set_xdata([0, len(xn)])\n",
