--- a/Oversikt.ipynb
+++ b/Oversikt.ipynb
@@ -21,7 +21,8 @@
     "11 | [Frekvensrespons](11_Frekvensrespons.ipynb) | Oppdatert fredag 19. mars\n",
     "12 | [DTFT og praktisk filterdesign](12_DTFT%20og%20praktisk%20filterdesign.ipynb) | Ny tirsdag 23. mars\n",
     "12 | [IIR filtre introduksjon](12_IIR%20filtre%20introduksjon.ipynb) | Ny fredag 26. mars\n",
-    "14 | [Z-transformasjon del 1](14_Z-transformasjon.ipynb) | Oppdatert fredag 9. april"
+    "14 | [Z-transformasjon del 1](14_Z-transformasjon.ipynb) | Oppdatert tirsdag  13. april\n",
+    "15 | [Mer om transferfunksjoner](15_Mer%20om%20transferfunksjoner.ipynb) | Ny fredag 16. april"
    ]
   }
  ],
